featured flower added

--- a/index.html
+++ b/index.html
@@ -30,8 +30,25 @@
     <main>
        <section>
         <div>
-            <h3 ></h3>
-        </div>
+            <h3 class="feature-head">Our Featured Flowers</h3></div>
+            <div class="feature-text-div"><p class="feature-text">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p></div>
+        
+       </section>
+       <section class="images">
+        <div class="fimg-01-div">
+            <img class="fimg-01" src="images/pngwing 6.png" alt="">
+            </div>
+        <div class="fimg-02-div">
+            <img class="fimg-02" src="images/pngwing 5.png" alt="">
+            </div>
+        <div class="fimg-03-div">
+            <img class="fimg-03" src="images/pngwing 7.png" alt="">
+            </div>
+       </section>
+       <section class="fimg-text-flex">
+    <div class="fimg-flex-01">Pink Flower Tree</div>
+    <div class="fimg-flex-02">Pink Flower Tree</div>
+    <div class="fimg-flex-03">Pink Flower Tree</div>
        </section>
 
     </main>
