--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
     <div class="fimg-flex-03">Pink Flower Tree</div>
        </section>
 
+
+       <section class="hot-deal-section">
+        <div class="hot-deal-div">
+            <h3 class="hot-deal">Hot Deal ! Sale Up To 25% <span class="hot-deal-colour"> Off</span></h3>
+            <p class="hot-deal-description">It is a long established fact that a reader will be distracted by the readable <br> content of a page when looking at its layout.</p>
+            <button class="hot-deal-btn"><span class="hdbt">Sign Up</span></button>
+        </div>
+        <div class="hot-deal-img">
+            <img src="images/pngwing 8.png" alt="">
+       </div>
+       </section>
+
+       
+
     </main>
     <footer>
 
